<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <ImageView
        android:id="@+id/imViewMain"
        android:layout_width="297dp"
        android:layout_height="278dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv_content_descrip"

        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:text="@string/tv_date"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNumDecLatitudeMain"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_latitude_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDate"
        app:layout_constraintEnd_toStartOf="@+id/etNumDecLongitudeMain"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNumDecLongitudeMain"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_longitude_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNumDecLatitudeMain"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCaptionMain"
        android:layout_width="203dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_caption_hint"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <Button
        android:id="@+id/btSearchMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="24dp"
        android:onClick="sendMessage"
        android:text="@string/button_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btUploadMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btSnapMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_snap"
        app:layout_constraintBottom_toTopOf="@+id/btSearchMain"
        app:layout_constraintEnd_toStartOf="@+id/btNext"
        app:layout_constraintStart_toEndOf="@+id/btPrevious" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="16dp"
        android:onClick="scrollPhotos"
        android:text="@string/button_next"
        app:layout_constraintBottom_toTopOf="@+id/btUploadMain"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:hint="@string/imViewMain"
        android:id="@+id/etDate"
        android:layout_width="144dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/imViewMain"
        android:autofillHints="" />

    <Button
        android:id="@+id/btPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="16dp"
        android:onClick="scrollPhotos"
        android:text="@string/button_previous"
        app:layout_constraintBottom_toTopOf="@+id/btSearchMain"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>